langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__clarifying_attrb.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        #[req_note(\"ID1\")]\n        fn foo() {}\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: None,
        ),
      ],
      line: 2,
      related_code: Some(3),
      kind: clarifies,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 3,
      span: LineSpan(
        start: 2,
        end: 3,
      ),
      kind: function,
      content_hash: Some("799fd071093d9b9cf89223f7dafa95d2c13191b29c900b5cf6da74442038fab4"),
    ),
  ],
  coverage_excludes: [],
)
