langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__debug_assert_eq_fn_like.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        fn foo() {\n            debug_assert_eq_req!(\"ID1.debug_assert\" => 1, 1)\n        }\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1.debug_assert",
          product_id: None,
        ),
      ],
      line: 3,
      related_code: Some(CodeBlock(
        kind: other,
        span: LineSpan(
          start: 3,
          end: 3,
        ),
        content_hash: Some("37607adc11cdb5affded6394d44c6873bab7d6c9b58e2da701c448c6df41f9a5"),
      )),
      kind: verifies,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 2,
      span: LineSpan(
        start: 2,
        end: 4,
      ),
      kind: function,
      content_hash: Some("c8044ae81765a71e18c74dc7f5197d946d289d4add594659fba9e69a1e066d47"),
    ),
  ],
  coverage_excludes: [],
)
