langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__link_fn_like.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        fn foo() {\n            link_req!(\"ID1.link\" => {\n                // some code...\n            })\n        }\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1.link",
          product_id: None,
        ),
      ],
      line: 3,
      related_code: Some(CodeBlock(
        kind: other,
        span: LineSpan(
          start: 3,
          end: 5,
        ),
        content_hash: Some("891c26833a6813f487b4f8d6ae4744a79723ae3fb6b6c4c7c11c89525b89d39c"),
      )),
      kind: links,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 2,
      span: LineSpan(
        start: 2,
        end: 6,
      ),
      kind: function,
      content_hash: Some("5ca6bc4ab386ef1d8dd3422b7c2f1c59093bb2530ae7c723e505e8b116f6384e"),
    ),
  ],
  coverage_excludes: [],
)
