langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__linking_attrb.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        #[req_link(\"ID1\")]\n        fn foo() {}\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: None,
        ),
      ],
      line: 2,
      related_code: Some(3),
      kind: links,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 3,
      span: LineSpan(
        start: 2,
        end: 3,
      ),
      kind: function,
      content_hash: Some("cd03b4bcdb936e93db4ce688015991fe0d39bffac3b1222eb9970a9b520061a1"),
    ),
  ],
  coverage_excludes: [],
)
