langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__mult_ids.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        #[req(\"ID1\", \"ID2\")]\n        fn foo() {}\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: None,
        ),
        RequirementPk(
          id: "ID2",
          product_id: None,
        ),
      ],
      line: 2,
      related_code: Some(3),
      kind: satisfies,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 3,
      span: LineSpan(
        start: 2,
        end: 3,
      ),
      kind: function,
      content_hash: Some("8ec068bc47b21e5415d77402c26cfee35af538e06db7ab7ef11561d7a28b48a5"),
    ),
  ],
  coverage_excludes: [],
)
