langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__nested_cfg_attrb.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        #[cfg_attr(feature = \"some-feature\", cfg_attr(target_os = \"some-os\", req_link(\"ID1\")))]\n        fn foo() {}\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: None,
        ),
      ],
      line: 2,
      related_code: Some(3),
      kind: links,
      properties: Some({
        "cfg_attr": [
          "feature=\"some-feature\"",
          "target_os=\"some-os\"",
        ],
      }),
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 3,
      span: LineSpan(
        start: 2,
        end: 3,
      ),
      kind: function,
      content_hash: Some("68f666ab804266a9984a1055b8a014de77fa87740a9a87ae312f6949a6682db4"),
    ),
  ],
  coverage_excludes: [],
)
