langs/mantra-lang-tracing/src/collect/rust/snapshots/mantra_lang_tracing__collect__rust__tests__nested_fn_like.snap
---
source: langs/mantra-lang-tracing/src/collect/rust/tests.rs
info: "\n        fn foo() {\n            satisfy_req!(\"ID1\" => {\n                // some code...\n                clarify_req!(\"ID2\" => {\n                    // nested code ...\n                });\n            });\n        }\n        "
---
Annotations(
  traces: [
    Trace(
      ids: [
        RequirementPk(
          id: "ID1",
          product_id: None,
        ),
      ],
      line: 3,
      related_code: Some(CodeBlock(
        kind: other,
        span: LineSpan(
          start: 3,
          end: 8,
        ),
        content_hash: Some("71f6b19d722ec5d3bb8731ccfe175cf5a8604a53140861f22d16e160acbb0575"),
      )),
      kind: satisfies,
      properties: None,
    ),
    Trace(
      ids: [
        RequirementPk(
          id: "ID2",
          product_id: None,
        ),
      ],
      line: 5,
      related_code: Some(CodeBlock(
        kind: other,
        span: LineSpan(
          start: 5,
          end: 7,
        ),
        content_hash: Some("c78664e2bc5cb270d988a3bbd224b547df9fbc451672a8feb601d960a47f4665"),
      )),
      kind: clarifies,
      properties: None,
    ),
  ],
  elements: [
    Element(
      ident: None,
      name: "foo",
      definition_line: 2,
      span: LineSpan(
        start: 2,
        end: 9,
      ),
      kind: function,
      content_hash: Some("0b1cc96b8d46f2515059884f24f60ba6b578ef98d8f0a5f120537b841f145250"),
    ),
  ],
  coverage_excludes: [],
)
